--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,33 @@
-name: Buffett Tracker
+name: BotInversor7Sabios
 on:
   schedule:
-    - cron: '0 10 * * *'  # Esto lo ejecuta a las 10:00 AM UTC (ajusta a tu gusto)
-  workflow_dispatch:      # Esto te permite darle al botón "Play" manual en GitHub
+    - cron: '0 9 * * *' # Se ejecuta a las 9 AM UTC
+  workflow_dispatch: # Permite que tú le des al botón de "Ejecutar ahora"
 
 jobs:
-  build:
+  run-bot:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Permiso crucial para que el bot guarde sus archivos de memoria
     steps:
-      - name: Checkout del código
+      - name: Checkout código
         uses: actions/checkout@v3
       
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          
-      - name: Instalar librerías
-        run: pip install -r requirements.txt
-        
+      
+      - name: Instalar dependencias
+        run: pip install requests beautifulsoup4
+      
       - name: Ejecutar Bot
         run: python bot.py
-        
-      - name: Guardar cambios en la base de datos local
+      
+      - name: Guardar estados de carteras
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add cartera.txt
-          git commit -m "Actualizar base de datos" || echo "Sin cambios"
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git add *.txt
+          git commit -m "Actualización diaria de carteras" || exit 0
           git push
-          
